# CC-Minimal

./: CC-Minimal.cabal  LICENSE
src/CC/: Language.hs  Object.hs  Parser.hs  Tag.hs
test/: all-tests.hs
test/CC/: Generator.hs  LanguageTest.hs  ObjectTest.hs  ParserTest.hs
